--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,5 @@ dependencies {
     }
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test:rules:1.2.0'
+     androidTestImplementation 'androidx.test:rules:1.2.0'
 }
